Update stylesheet paths from /public/css to /templates/css and add static file serving

--- a/templates/classifieds/index.njk
+++ b/templates/classifieds/index.njk
@@ -5,7 +5,7 @@
 
 {% block head %}
 {{ super() }}
-<link rel="stylesheet" href="/css/classifieds.css">
+<link rel="stylesheet" href="/templates/css/classifieds.css">
 {% endblock %}
 
 {% block content %}
