Document database-backed stylesheet system with admin UI and sync workflow

--- a/templates/classifieds/index.njk
+++ b/templates/classifieds/index.njk
@@ -5,7 +5,7 @@
 
 {% block head %}
 {{ super() }}
-<link rel="stylesheet" href="/templates/css/classifieds.css">
+<link rel="stylesheet" href="/styles/classifieds.css">
 {% endblock %}
 
 {% block content %}
