--- a/templates/scaffolds/content-cta-sidebar.njk
+++ b/templates/scaffolds/content-cta-sidebar.njk
@@ -3,7 +3,7 @@
 {% block styles %}
 .page-header {
   padding: 4rem 0;
-  background: white;
+  background: var(--color-background);
   border-bottom: 1px solid var(--color-border);
 }
 
