--- a/templates/scaffolds/three-column.njk
+++ b/templates/scaffolds/three-column.njk
@@ -3,7 +3,7 @@
 {% block styles %}
 .page-header {
   padding: 6rem 0 3rem;
-  background: white;
+  background: var(--color-background);
 }
 
 .page-header h1 {
