--- a/templates/customer/account.njk
+++ b/templates/customer/account.njk
@@ -14,6 +14,9 @@
       <div id="profile-content" class="loading">Loading...</div>
     </div>
 
+    <h1>BULLSHIT</h1>
+    <p> #{{ customer.sites_limit }} </p>
+
     {# My Sites Section - Only show if customer has limit > 0 #}
     {% if customer and customer.sites_limit > 0 %}
     <div class="account-section">
